# tracker_kursovik

./: pyproject.toml
config/: settings.py  urls.py
tracker_habits/: admin.py  apps.py  models.py  serializers.py  urls.py  validators.py  views.py
tracker_habits/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py  0002_remove_user_city_user_tg_chat_id_user_tg_nik_and_more.py
